Fixed the z-index

--- a/style.css
+++ b/style.css
@@ -13,11 +13,11 @@ li {
     overflow: hidden;
     background-color: #e9e9e9; 
     /* fixed the menu always on the top*/
-    position: fixed;
+    position: sticky;
     top: 0em;
     left:0em;
     right:0em;
-    
+    z-index: 1;
   }
     
 /* Style the links inside the navigation bar */
@@ -183,8 +183,9 @@ li {
       position:fixed; 
       bottom: 4rem; 
       right: 5rem; 
-      font-size: 1em;
+      font-size: 1.5em;
       padding: 12px 20px;
+      z-index: 1;
     }
     
 
